--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -22,8 +22,9 @@ jobs:
 
       - name: 安装 pnpm
         uses: pnpm/action-setup@v4
-        with:
-          version: 9
+        # 自动从 package.json 的 packageManager 字段读取版本
+         with:
+          version: 9.0.0  # 明确指定版本，与 package.json 保持一致
 
       - name: 设置 Node.js
         uses: actions/setup-node@v4
