--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -3,7 +3,6 @@ name: 部署文档
 on:
   push:
     branches:
-      # 确保这是你正在使用的分支名称
       - main
 
 permissions:
@@ -22,9 +21,8 @@ jobs:
 
       - name: 安装 pnpm
         uses: pnpm/action-setup@v4
-        # 自动从 package.json 的 packageManager 字段读取版本
-         with:
-          version: 9.0.0  # 明确指定版本，与 package.json 保持一致
+        with:
+          version: 9.0.0
 
       - name: 设置 Node.js
         uses: actions/setup-node@v4
@@ -38,13 +36,12 @@ jobs:
       - name: 构建文档
         env:
           NODE_OPTIONS: --max_old_space_size=8192
-        run: |-
+        run: |
           pnpm run docs:build
           > docs/.vuepress/dist/.nojekyll
 
       - name: 部署文档
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          # 这是文档部署到的分支名称
           branch: gh-pages
           folder: docs/.vuepress/dist
