--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "docs:build": "vuepress build docs",
     "docs:clean-dev": "vuepress dev docs --clean-cache",
     "docs:dev": "vuepress dev docs",
+    "docs:preview": "vuepress build docs && npx serve docs/.vuepress/dist",
     "docs:update-package": "pnpm dlx vp-update"
   },
   "devDependencies": {
     "@vuepress/bundler-vite": "2.0.0-rc.20",
     "@vuepress/theme-default": "2.0.0-rc.88",
     "sass-embedded": "^1.86.0",
+    "serve": "^14.2.3",
     "vue": "^3.5.13",
     "vuepress": "2.0.0-rc.20"
   }
